java 22 supported, fix crash bug