@@ -18,7 +18,7 @@ base {
     archivesName = mod_id
 }
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(21)
+java.toolchain.languageVersion = JavaLanguageVersion.of(22)
 
 neoForge {
     // Specify the version of NeoForge to use.
@@ -37,16 +37,12 @@ neoForge {
     runs {
         client {
             client()
-            jvmArgument '--enable-preview'
-
-            programArgument '--enable-preview'
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
             systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
         }
 
         server {
             server()
-            programArgument '--enable-preview'
             programArgument '--nogui'
             systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
         }
@@ -98,10 +94,6 @@ neoForge {
 
 // Include resources generated by data generators.
 sourceSets.main.resources { srcDir 'src/generated/resources' }
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs.add('--enable-preview')
-}
 
 // 在 build.gradle 文件中找到或添加以下代码块
 tasks.named('createMinecraftArtifacts') {
@@ -180,5 +172,5 @@ idea {
     }
 }
 kotlin {
-    jvmToolchain(21)
+    jvmToolchain(22)
 }
